add second stylesheet link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="bgimg.css" />
+
   </head>
   <body>
     <!-- Calc Container -->
@@ -27,7 +29,7 @@
           placeholder="Input temperature here!"
         />
         <!-- Buttons -->
-        <div class="unit-btns">
+        <div class="btn-container">
           <div class="input-btn">
             <button class="input-sel">°F</button>
             <button class="input-sel">°C</button>
