finish initial styling

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
   <body>
     <!-- Calc Container -->
     <div class="calc-container" id="calc-container">
-      <div class="calc">
         <!-- Input -->
         <input
           type="text"
-          class="temp-input"
+          class="input"
           placeholder="Input temperature here!"
         />
         <!-- Buttons -->
@@ -40,8 +39,7 @@
             <button class="output-sel">°C</button>
             <button class="output-sel">K</button>
           </div>
-        </div>
-
+          </div>
         <div class="output" id="output">Placeholder</div>
       </div>
     </div>
