--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <!-- Buttons -->
         <div class="btn-container">
           <div class="input-btn">
-            <button class="input-sel">°F</button>
-            <button class="input-sel">°C</button>
-            <button class="input-sel">K</button>
+            <button class="input-sel f">°F</button>
+            <button class="input-sel c">°C</button>
+            <button class="input-sel k">K</button>
           </div>
           <div class="output-btn">
-            <button class="output-sel">°F</button>
-            <button class="output-sel">°C</button>
-            <button class="output-sel">K</button>
+            <button class="output-sel f">°F</button>
+            <button class="output-sel c">°C</button>
+            <button class="output-sel k">K</button>
           </div>
           </div>
         <div class="output" id="output">Placeholder</div>
