implement conversion function and add mroe event listeners

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <button class="btn" id="calc-btn">Run!</button>
           </div>
-        <div class="output" id="output">Placeholder</div>
+        <div class="output" id="output">Output Temperature</div>
       </div>
     </div>
     <!-- Footer -->
