fix broken function implementation and add reset button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             <button class="btn output-sel" id="outC">C</button>
             <button class="btn output-sel" id="outK">K</button>
           </div>
+          <div class="action-btns">
           <button class="btn" id="calc-btn">Run!</button>
+          <button class="btn" id="reset-btn">Reset</button>
+          </div>
           </div>
         <div class="output" id="output">Output Temperature</div>
       </div>
